fixed match card spacing and changed overview units to px

--- a/client/components/match_history/MatchCard.module.css
+++ b/client/components/match_history/MatchCard.module.css
@@ -46,6 +46,7 @@
 }
 
 .gamemode_text {
+    min-width: 100px;
     color: #F0F4F8;
     font-family: sans-serif;
     font-size: 17px;
@@ -77,6 +78,7 @@
     color: #F0F4F8;
     font-family: 'Libre Baskerville', serif;
     margin-top: 8px;
+    min-width: 120px;
     margin-bottom: 5px;
     font-size: 18px;
     cursor: default;
@@ -396,6 +398,9 @@
 }
 
 .matchup_container {
+    margin: 0;
+    float: right;
+    justify-self: right;
     display: block;
     align-self: center;
     justify-content: center;
